# story-canvas

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README-SUPPLEMENT.md  README.en.md  README.md  README.zh-CN.md  START_HERE.md  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
adapters/: ADAPTER_ARCHITECTURE.md  MODULE.md  README.md
docs/: AI_REPO_BOOTSTRAP_PLAYBOOK.md  ARCHITECTURE_GUARDRAILS.md  COMMIT_POLICY.md  DOCUMENT_LIFECYCLE.md  ENGINEERING_GOVERNANCE.md  MODULE.md  PROJECT_PROFILE.md  roadmap.md  v3-plan.md
docs/adr/: ADR-002-optional-dependencies-and-providers.md
docs/guides/: comprehensive-review-usage-guide.md  creative-workflow.md  genre-review-rubric.md  migrate-from-skill-prototype.md  novel-engineering-init.md  quickstart.md  releasing.md  sample-matrix.md  volume-self-review.md  webui-integration-quickstart.md  writing-rules.md
docs/plans/: 2026-04-23-chapter-wordcount-and-structure-guidance.md  2026-04-23-commercial-long-sample.md  2026-04-23-commercial-review-alignment.md  2026-04-23-commercial-writing-blueprint.md  2026-04-23-outline-first-constraints.md  2026-04-23-sample-entry-alignment.md  2026-04-23-sample-matrix-guide.md  2026-04-23-scene-detect-bootstrap.md  2026-04-23-style-sample-entry.md  (+102 more)
examples/: templates.md
scripts/: check_pull_request_template.py  check_rule_touchpoints.py  install_adapter.py  install_adapters.py  story_canvas_ui_api.py
ui/: MODULE.md  README.md  design.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+490 files in other folders)
