[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "story-canvas"
version = "0.2.1"
description = "Agent-native story and visual workflow platform for structured fiction and image generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Story Canvas Contributors", email = "opensource@example.com" }
]
dependencies = []

[project.scripts]
story-canvas = "story_canvas.main:main"
story-harness = "story_canvas.main:main"

[project.optional-dependencies]
style-local = [
  "rapidfuzz>=3.0,<4.0",
]
image-openai = [
  "openai>=1.0,<2.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/story_canvas", "src/story_harness_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
